unpackaged/main/default/objects/CMPL123__SAML_Request__c/CMPL123__SAML_Request__c.object-meta.xml
<CustomObject>
    <description>Used to store SAML Request during Federated SSO in 123 workflow e-signature functionalities.</description>
    <label>SAML Request</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAML Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>