unpackaged/main/default/objects/CMPL123__SAML_Request__c/fields/CMPL123__Expiration_Time__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Expiration_Time__c</fullName>
        <label>Expiration Time</label>
        <type>DateTime</type>
    </CustomField>