unpackaged/main/default/objects/CMPL123__SAML_Request__c/fields/CMPL123__Federation_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Federation_Id__c</fullName>
        <label>Federation Id</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>