unpackaged/main/default/objects/CMPL123__SAML_Request__c/fields/CMPL123__Is_Active__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Active</description>
        <inlineHelpText>Is Active</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </CustomField>