unpackaged/main/default/objects/CMPL123__SAML_Request__c/fields/CMPL123__Related_User__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Related_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>SAML Requests</relationshipLabel>
        <relationshipName>SAML_Requests</relationshipName>
        <type>Lookup</type>
    </CustomField>