unpackaged/main/default/objects/CMPL123__SAML_Request__c/fields/CMPL123__Relay_State__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Relay_State__c</fullName>
        <label>Relay State</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>