unpackaged/main/default/objects/CMPL123__SAML_Request__c/fields/CMPL123__Request_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Request_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Request Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>