unpackaged/main/default/objects/CMPL123__SAML_Request__c/fields/CMPL123__SAML_Response_Time__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__SAML_Response_Time__c</fullName>
        <description>SAML Response Time</description>
        <inlineHelpText>SAML Response Time</inlineHelpText>
        <label>SAML Response Time</label>
        <type>DateTime</type>
    </CustomField>