unpackaged/main/default/objects/CMPL123__SAML_Request__c/fields/CMPL123__SAML_Validation_Failed_Reason__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__SAML_Validation_Failed_Reason__c</fullName>
        <description>SAML Validation Failed Reason</description>
        <inlineHelpText>SAML Validation Failed Reason</inlineHelpText>
        <label>SAML Validation Failed Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </CustomField>