unpackaged/main/default/objects/CMPL123__SAML_Request__c/fields/CMPL123__SAML_Validation_Status__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__SAML_Validation_Status__c</fullName>
        <description>SAML Validation Status</description>
        <inlineHelpText>SAML Validation Status</inlineHelpText>
        <label>SAML Validation Status</label>
        <length>250</length>
        <type>Text</type>
    </CustomField>