unpackaged/main/default/objects/CMPL123__SAML_Request__c/fields/CMPL123__SSO_Config_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__SSO_Config_Name__c</fullName>
        <description>SSO Config Name</description>
        <inlineHelpText>SSO Config Name</inlineHelpText>
        <label>SSO Config Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>